--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "easymde": "^2.17.0",
-    "firebase": "^9.9.4"
+    "firebase": "^9.9.4",
+    "location-picker": "^1.1.1"
   }
 }
