--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
     "easymde": "^2.17.0",
+    "express": "^4.18.1",
     "firebase": "^9.9.4",
+    "helmet": "^6.0.0",
     "location-picker": "^1.1.1",
+    "nodemon": "^2.0.19",
+    "pug": "^3.0.2",
     "sweetalert": "^2.1.2"
   }
 }
